# reaction-network

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .prospector.yml  .pylintrc  .readthedocs.yml  404.html  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  changelog.html  contributing.html  demo.ipynb  environment.yaml  environment.yml  genindex.html  index.html  license.html  mkdocs.yml  objects.inv  prospector.yml  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements-optional.txt  requirements-testing.txt  requirements.txt  requirements_docs.txt  rxn_network.core.html  rxn_network.costs.html  rxn_network.data.html  rxn_network.entries.html  rxn_network.enumerators.html  (+15 more)
.doctrees/: genindex.doctree  rxn_network.core.doctree  rxn_network.costs.doctree  rxn_network.data.doctree  rxn_network.doctree  rxn_network.entries.doctree  rxn_network.enumerators.doctree  rxn_network.flows.doctree  rxn_network.jobs.doctree  rxn_network.network.doctree  rxn_network.pathways.doctree  rxn_network.reactions.doctree  rxn_network.thermo.doctree  rxn_network.utils.doctree  tutorials.doctree
.doctrees/notebooks/: 1_enumerators.doctree  2_networks.doctree
.doctrees/notebooks/archived/: demo_v1.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: post-process.yml  release.yml  testing.yml
CHANGELOG/: index.html
_modules/: index.html
_modules/rxn_network/: core.html  data.html
_modules/rxn_network/costs/: base.html  calculators.html  functions.html  pareto.html
_modules/rxn_network/entries/: corrections.html  entry_set.html  experimental.html  freed.html  gibbs.html  interpolated.html  nist.html  utils.html
_modules/rxn_network/enumerators/: base.html  basic.html  minimize.html  utils.html
_modules/rxn_network/flows/: core.html
_modules/rxn_network/jobs/: core.html  schema.html  utils.html
_modules/rxn_network/network/: base.html  entry.html  network.html  visualize.html
_modules/rxn_network/pathways/: balanced.html  base.html  basic.html  pathway_set.html  plotting.html  solver.html
_modules/rxn_network/reactions/: base.html  basic.html  computed.html  hull.html  open.html  plotting.html  reaction_set.html
_modules/rxn_network/thermo/: chempot_diagram.html  utils.html
_modules/rxn_network/utils/: funcs.html  ray.html
_sources/: rxn_network.costs.rst.txt  rxn_network.enumerators.rst.txt
_sources/notebooks/archived/: demo_v1.ipynb.txt
_static/: documentation_options.js
docs/: .buildinfo  CHANGELOG.md  analysis.md  conf.py  core.md  entries.md  genindex.html  helpers.md  index.html  index.md  index.rst  license.rst  network.ipynb  objects.inv  py-modindex.html  reaction.md  rxn_network.core.rst  rxn_network.data.rst  rxn_network.entries.rst  rxn_network.flows.rst  rxn_network.jobs.rst  rxn_network.network.rst  rxn_network.pathways.rst  rxn_network.reactions.rst  rxn_network.rst  rxn_network.thermo.rst  rxn_network.utils.rst  search.html  searchindex.js  tutorials.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/_modules/rxn_network/: core.html  helpers.html
docs/_static/: custom.css
docs/css/: mkdocstrings.css
docs/reference/: utils.md
docs/reference/builders/: retrosynthesis.md  schema.md
docs/reference/core/: calculator.md  composition.md  cost_function.md  enumerator.md  network.md  pathway.md  reaction.md  solver.md
docs/reference/costs/: base.md  calculators.md  competition.md  competitiveness.md  pareto.md  softplus.md
docs/reference/data/: data.md
docs/reference/entries/: barin.md  corrections.md  entry_set.md  experimental.md  freed.md  gibbs.md  interpolated.md  nist.md  utils.md
docs/reference/enumerators/: base.md  basic.md  minimize.md  utils.md
docs/reference/fireworks/: core.md
docs_rst/: conf.py  index.rst
enumerators/: index.html
examples/: 1_enumerators.ipynb  2_network.ipynb  2_networks.ipynb  fit_carbonate_correction.ipynb  fit_carbonate_correction_r2scan_mixing_scheme.ipynb  network.ipynb
network/: index.html
notebooks/: 1_enumerators.html  1_enumerators.ipynb  2_networks.html  FW.json  demo.ipynb  enumerators.ipynb  fit_carbonate_correction.ipynb  metadata.json  network-Copy1.ipynb  network.ipynb  network.json  rxns.json
notebooks/archived/: demo_v1.html  demo_v1.ipynb
reference/utils/: index.html
rxn_network/: analysis.py  compounds.json  core.py  entries.py  helpers.py  reaction.py
rxn_network/data/: Ceder_data.json  MR_data.json  MR_data_clean.pkl  MR_data_clean_grouped.pkl  ceder_data_clean.pkl  ceder_data_clean_grouped.pkl
scripts/: generate_free_data.py  generate_freed_data.py  generate_janaf_data.py
search/: search_index.json
src/rxn_network/: __init__.py  analysis.py  composition.py  core.py  entries.py  helpers.py  old_analysis.py  old_core.py  reaction.py  utils.py
tests/: conftest.py  test_basic_reaction.py  test_computed_reaction.py  test_entry_set.py  test_gibbs_entry.py  test_nist_entry.py  test_reaction_set.py
tests/builders/: test_retrosynthesis.py  test_schema.py
tests/costs/: test_calculators.py  test_competitiveness.py  test_pareto.py  test_softplus.py
tests/entries/: test_barin.py  test_corrections.py  test_entry_set.py  test_freed.py  test_gibbs.py  test_interpolated.py  test_nist.py  test_utils.py
tests/enumerators/: test_basic.py  test_minimize.py
tests/firetasks/: test_build_inputs.py  test_parse_outputs.py  test_run_calc.py
tests/fireworks/: test_core.py
tests/flows/: test_core.py
tests/jobs/: test_core.py
tests/network/: test_entry.py  test_network.py  test_visualize.py
tests/pathways/: test_balanced.py  test_basic.py  test_plotting.py  test_solver.py  test_utils.py
tests/reactions/: test_basic.py  test_computed.py  test_hull.py  test_open.py  test_plotting.py  test_reaction_set.py
tests/test_files/: Mn-O_entries.json  comp_matrices.npy  structure_LiFe4P4O16.json
tests/thermo/: test_chempot_diagram.py  test_utils.py
tests/utils/: test_funcs.py  test_ray.py
(+207 files in other folders)
